hope in game over

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,9 @@
 	font-family: "Rubik";
 }
 
-
+.close{
+	margin: -1rem -1rem -1rem !important;
+}
 #ex1Slider .slider-selection {
 	background: #BABABA;
 }
