--- a/app/views/application/game_over.html.erb
+++ b/app/views/application/game_over.html.erb
@@ -108,13 +108,14 @@
 <hr>
 <h3><%= t('country.game_over.what_to_do') %></h3>
 <ul>
+  <li><%= link_to t('country.game_over.hashomer'), hashomer_hatzair_path %> - <%= t('country.game_over.hashomer_exp') %></li>
   <li><%= link_to t('country.game_over.xr'), "https://xrebellionisrael.earth/" %> - <%= t('country.game_over.xr_exp') %></li>
   <li><%= link_to t('country.game_over.tree'), "http://citytree.net/" %> - <%= t('country.game_over.tree_exp') %></li>
-  <li><%= link_to t('country.game_over.change'), "https://www.youtube.com/watch?v=58foRGYOoU8" %></li>
+  <li><%= link_to t('country.game_over.change'), new_direction_path %> - <%= t('country.game_over.change_exp') %></li>
   <li><%= link_to t('country.game_over.this_changes'), "https://ecowiki.org.il/wiki/%D7%96%D7%94_%D7%9E%D7%A9%D7%A0%D7%94_%D7%94%D7%9B%D7%9C" %> - <%= t('country.game_over.eco_wiki') %></li>
   <li><%= link_to t('country.game_over.air'), "https://www.globes.co.il/news/article.aspx?did=1001245957" %></li>
-  <li><%= link_to t('country.game_over.new_deal'), "https://www.youtube.com/watch?v=d9uTH0iprVQ&feature=youtu.be" %> <%= t('country.game_over.new_deal_exp') %></li>
-  <li><%= link_to t('country.game_over.greta'), "https://www.youtube.com/watch?v=TMrtLsQbaok" %></li>
+  <li><%= link_to t('country.game_over.new_deal'), "https://youtu.be/VWtQrn-aRrM" %> <%= t('country.game_over.new_deal_exp') %></li>
+  <li><%= link_to t('country.game_over.greta'), "https://www.youtube.com/watch?v=kR5X1n7AY3A" %></li>
   <li><%= link_to t('country.game_over.story'), "https://www.youtube.com/watch?v=cpkRvc-sOKk" %> - <%= t('country.game_over.story_exp') %></li>
 </ul>
 	<div class="">
