--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 *{
 	direction: rtl;
 	text-align: right;
-	font-family: "Rubik";
+	font-family: "Rubik", Arial, Helvetica, sans-serif;
 }
 
 .close{
