--- a/app/views/application/home_page.html.erb
+++ b/app/views/application/home_page.html.erb
@@ -34,8 +34,8 @@
 </div>
 <% else %>
 <div class="parent w-100 h-screen">
-<div class="div1 d-flex align-items-center justify-content-center mt-3">
-  <div class="quote-container-desktop w-50">
+<div class="div5 d-flex align-items-center justify-content-center mt-3">
+  <div class="quote-container-desktop w-100">
   <blockquote class="quote-box  line-height-16">
     <p class="quotation-mark line-height-16">
       “
@@ -52,29 +52,21 @@
   </blockquote>
 </div>
 </div>
-<div class="div2 d-flex align-items-center justify-content-center">
-  <div class="shadow p-3 rounded-lg bg-light">
-    <%= form_with(url: ministers_path, method: "get", local: true) do %>
-    <h2><%= label_tag(:game, I18n.t("application.home_page.players"), class:"mb-0") %></h2>
-    <p class="mb-2"><%= t('.minister_count', count: Minister.count) %></p>
-    <%= text_field_tag(:game, nil, class: "w-100 form-control") %> <br>
-    <%= submit_tag I18n.t("application.home_page.new_game"), class: "btn btn-success btn-sm mt-1 float-left" %>
-    <% end %>
-    <p id="notice"><%= notice if params[:error]%></p>
-
+<div class="div3 d-flex align-items-center justify-content-center">
+  <!-- <div class="shadow p-3 rounded-lg bg-light"> -->
+    <button type="button" name="button" class="btn btn-success h-25 w-75"  data-toggle="modal" data-target="#startModal"><h3 class="text-center"><%= t ".new_game" %></h3"></button>
+  <!-- </div> -->
   </div>
-  </div>
-  <div class="div3 d-flex flex-column align-items-center">
+  <div class="div6 d-flex flex-column align-items-center">
     <div class="d-flex flex-column align-items-center h-50">
       <%= image_tag "fenix.svg", class: "w-50 mt-5" %>
       <h1 class="w-100 text-center"><%= t ".title" %></h1>
     </div>
-    <div class="d-flex flex-column align-items-center align-self-end h-50">
-      <h4><%= t ".background_html" %></h4>
-      <button class="btn btn-secondary" type="button" name="button"  data-toggle="modal" data-target="#instructionsModal"><%= t ".instructions" %></button>
-    </div>
-  </div>
 
+  </div>
+  <div class="div4 d-flex align-items-center justify-content-center">
+    <button class="btn btn-outline-secondary h-25 w-75" type="button" name="button"  data-toggle="modal" data-target="#instructionsModal"><h3 class="text-center"><%= t ".instructions" %></h3"></button>
+  </div>
 </div>
 <!-- Modal -->
 <div class="modal fade w-100" id="instructionsModal" tabindex="-1" role="dialog" aria-labelledby="instructionsModalLabel" aria-hidden="true">
@@ -87,6 +79,8 @@
         </button>
       </div>
       <div class="modal-body">
+        <h1><%= t ".background_title" %></h1>
+        <%= t ".background_html" %>
         <h1><%= t ".goal_title" %></h1>
         <%= t ".goal" %>
 
@@ -103,6 +97,23 @@
       </div>
     </div>
   </div>
+</div>
+
+<div class="modal fade" id="startModal" tabindex="-1" role="dialog" aria-labelledby="startModalLabel" aria-hidden="true">
+    <div class="absolute-center modal-dialog w-25 h-25" role="document">
+      <div class="modal-content w-100 h-100">
+        <div class="modal-body w-100 h-100 d-flex  align-items-center justify-content-center">
+          <%= form_with(url: ministers_path, method: "get", local: true) do %>
+          <h2><%= label_tag(:game, I18n.t("application.home_page.players"), class:"mb-0") %></h2>
+          <p class="mb-2"><%= t('.minister_count', count: Minister.count) %></p>
+          <%= text_field_tag(:game, nil, class: "w-100 form-control") %> <br>
+          <%= submit_tag I18n.t("application.home_page.new_game"), class: "btn btn-success mt-1 float-left" %>
+          <% end %>
+          <p id="notice"><%= notice if params[:error]%></p>
+        </div>
+      </div>
+    </div>
+
 </div>
 
 <% end %>
