--- a/app/views/application/home_page.html.erb
+++ b/app/views/application/home_page.html.erb
@@ -34,6 +34,8 @@
 </div>
 <% else %>
 <div class="parent w-100 h-screen">
+  <div class="div1"></div>
+  <div class="div2"></div>
 <div class="div5 d-flex align-items-center justify-content-center mt-3">
   <div class="quote-container-desktop w-100">
   <blockquote class="quote-box  line-height-16">
